2009-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (ENHemf_put_text): Left/right/center justification of
	enhanced text was not taking into account the text angle. Now it does.
	Bugfix.

	* src/breaders.c (gd_filetype_function): Make load of jpeg or gif image
	conditional on support by the installed libgd.

	* src/unset.c (reset_command): Reset options to plot style filledcurve.
	Bug #2911203

2009-12-04  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* config/makefile.mgw config/makefile.cyg:  Create installation
	directories $(DESTDIR)/$(GNUPLOT_PS_DIR) $(DESTDIR)/$(GNUPLOT_LUA_DIR)
	$(DESTDIR)/$(GNUPLOT_JS_DIR)

2009-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.dj2:  Remove LUA from configuration options because
	lua.trm does not compile under djgpp (no snprintf).

2009-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin): Limit range of set ?margin at screen <foo>
	to 0 < foo < 1.

	* src/datafile.c (f_stringcolumn) src/plot2d.c (eval_plots):
	Enforce restrictions on which plot types can accept matrix data.
	(NB: reverted because of problems reported in 4.5)

	* src/datafile.c (df_open): Re-initialize df_num_bin_records to 0 at the
	start of every file.

2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>

	* config/makefile.cyg config/makefile.dj2 config/makefile.mgw
	config/makefile.os2 src/Makefile.am term/lua.trm term/Makefile.am.in:
	Install gnuplot-tikz.lua under $pkgdatadir rather than under
	$pkglibexecdir.
	Fixes build problems under cygwin and mingw.
	Thanks to Tatsuro Matsuoka.

2009-11-30  Shigeharu Takeno  <shige-takeno@users.sourceforge.net>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc 1.568.2.19

	* term/gd.trm: Replace two missing lines

2009-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	4.4.0-rc1

2009-11-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/winmain.c (MyFPrintF MyVFPrintF MyPrintF): Workaround for