@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.568.2.19 2009/11/16 10:38:35 mikulik Exp $
+C RCS $Id: gnuplot.doc,v 1.568.2.20 2009/12/20 03:54:42 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -7107,7 +7107,7 @@ Ffigure_mapcontours
        set dgrid3d {<rows>} {,{<cols>}}
                    { splines |
                      qnorm {<norm>} |
-                     gauss | cauchy | exp | box | hann {<dx>} {,{dy}} }
+                     (gauss | cauchy | exp | box | hann) {<dx>} {,dy} }
        unset dgrid3d
        show dgrid3d
 
