@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: show.c,v 1.227.2.2 2009/11/16 10:30:21 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: show.c,v 1.227.2.3 2009/12/20 03:54:42 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - show.c */
@@ -1326,14 +1326,11 @@ show_dgrid3d()
 		dgrid3d_row_fineness,
 		dgrid3d_col_fineness );
       } else {
-	char *modes[] = { "qnorm", "splines", 
-			  "gauss", "exp", "cauchy", "box", "hann" };
-			  
 	fprintf(stderr, 
 		"\tdata grid3d is enabled for mesh of size %dx%d, kernel=%s, scale factors x=%f, y=%f\n", 
 		dgrid3d_row_fineness,
 		dgrid3d_col_fineness,
-		modes[dgrid3d_mode],
+		reverse_table_lookup(dgrid3d_mode_tbl, dgrid3d_mode),
 		dgrid3d_x_scale,
 		dgrid3d_y_scale );
       }
